# camerae

./: .gitignore  AGENTS.md  CHANGELOG.md  README.md  project.yml
.github/workflows/: android-build.yml  ios-appstore-release.yml  ios-build.yml  ios-firebase-distribution.yml
Camerae/: AppOrientationLock.swift  AstroProcessingView.swift  CameraController.swift  CameraPreview.swift  CameraView.swift  CameraeApp.swift  ExposureStacker.swift  ProjectStore.swift  TimelapseSessionStore.swift  TimelapseVideoRenderer.swift  ZipWriter.swift
Camerae.xcodeproj/: project.pbxproj
android/: README.md  settings.gradle.kts
android/app/: build.gradle.kts
design/figma/: README.md  camerae.tokens.json
docs/: ANDROID_PORT.md  CAMERAE_VISION_FAST_PLAN.md  CAMERAE_VISION_IOS_TDD_PLAN.md  CAMERAE_VISION_IOS_V8_IMPLEMENTATION.md  CRASHLYTICS.md  EDIT_MODULE_TDD_PLAN.md  GITFLOW.md  IMAGE_ALIGNMENT_PROTOTYPE.md  PROJECT_STRUCTURE.md  STORAGE_DURABILITY_TDD_PLAN.md  UI_MIGRATION_V8.md  V3_PERFORMANCE_TDD_PLAN.md  VIDEO_CLIP_ALIGNMENT_TDD_PLAN.md
docs/ui-evidence/: README.md
ios/: Podfile  README.md  project.yml
ios/Camerae/: AppOrientationLock.swift  AppRootView.swift  AstroImageLabView.swift  AstroProcessingView.swift  BlockingProgressOverlay.swift  CameraController.swift  CameraPreview.swift  CameraView.swift  Camerae-Bridging-Header.h  CameraeApp.swift  CameraeCaptureLifecycle.swift  CapturePlanningViewModel.swift  DeepSNRDenoiser.swift  EdgeOverlayRenderer.swift  EditExportView.swift  EditExportViewModel.swift  EditPlaybackCoordinator.swift  EditProjectRuntimeView.swift  EditProjectViewModel.swift  EntryHomeView.swift  ExportedArchivesView.swift  ExposureStacker.swift  GoogleService-Info.plist  Info.plist  InfoPlist.xcstrings  Localizable.xcstrings  OpenCVBridge.h  OpenCVBridge.mm  ProjectListScreen.swift  ProjectStore.swift  ReferenceThumbnail.swift  RepeatableCameraView.swift  RepeatableProjectRuntimeView.swift  RepeatableProjectsMakeView.swift  ShareSheet.swift  TimelapseSessionStore.swift  TimelapseVideoRenderer.swift  WorkflowVideoSettings.swift  WorkflowVideoSettingsView.swift  ZipWriter.swift
ios/Camerae.xcodeproj/: project.pbxproj
ios/Camerae.xcworkspace/: contents.xcworkspacedata
ios/CameraeCore/: AtomicArtifactPublisher.swift  CameraeCore.swift  CapturePlanning.swift  EditModels.swift  EditProjectCatalog.swift  EditProjectCodec.swift  ManifestCompatibility.swift  MediaAssetModels.swift  MediaLibraryModels.swift  ProjectCatalog.swift  ProjectManifestCodec.swift  ProjectModels.swift  ProjectStorageScanner.swift  Providers.swift  SessionCatalog.swift  SessionManifestCodec.swift  SessionModels.swift
ios/CameraeCoreTests/: CapturePlanningTests.swift  EditProjectTests.swift  ProjectCatalogTests.swift  SessionCatalogTests.swift
ios/CameraeIntegrationTests/: AppCompositionTests.swift  CameraeCaptureLifecycleTests.swift  CameraeCrashReporterTests.swift  CameraeLocalizationTests.swift  CameraeNextAlignmentTests.swift  CameraeNextCaptureCompletionTests.swift  CameraeNextCapturePresentationTests.swift  CameraeNextCaptureToolCatalogTests.swift  CameraeNextEditExportPresentationTests.swift  CameraeNextGridCatalogTests.swift  CameraeNextNewProjectPresentationTests.swift  CameraeNextOperationPresentationTests.swift  CameraeNextProjectCatalogTests.swift  CameraeNextRepeatableAlignmentFlowTests.swift  CameraeNextSegmentedControlTests.swift  CameraeNextSessionCatalogTests.swift  CameraeNextWorkflowConfigurationTests.swift  CameraeSettingsTests.swift  CameraeVisionCoordinatorTests.swift  CameraeVisionOpenCVBackendTests.swift  CameraeVisionSchedulerTests.swift  CameraeVisionShadowIntegrationTests.swift  RepeatableSessionVideoAlignmentProcessorTests.swift  TimelapseOrientationRegressionTests.swift  VideoClipAlignmentAnalyzerTests.swift  VisualAlignmentTransformTests.swift
ios/CameraeMedia/: CameraeMedia.swift  ClipSpatialAlignment.swift  EditCompositionPlan.swift  EditVideoComposer.swift  MediaAssetProbe.swift  MediaLibraryCatalog.swift  MediaThumbnailDecoder.swift  ThumbnailPipeline.swift
ios/CameraeMediaTests/: ClipSpatialAlignmentTests.swift  EditCompositionPlanTests.swift  EditVideoComposerTests.swift  EditVideoTransformTests.swift  MediaLibraryCatalogTests.swift  ThumbnailPipelineTests.swift
ios/CameraePerformanceTests/: MediaLibraryFilterPerformanceTests.swift  ProjectCatalogPerformanceTests.swift
ios/CameraeUITests/: CameraeSmokeUITests.swift  CameraeUIEvidenceTests.swift
ios/CameraeVision/: CameraeVisionCaptureSession.mm  CameraeVisionClipAlignment.mm  CameraeVisionRuntime.mm
ios/CameraeVisionTests/: CameraeVisionBridgeContractTests.mm  CameraeVisionBuildTests.mm  CameraeVisionClipAlignmentTests.mm
ios/Config/: Debug.xcconfig  Release.env.example  Release.xcconfig  (+1 more)
processing/: .gitignore  CMakeLists.txt  README.md
processing/include/camerae_processing/: alignment_processor.hpp  astro_processor.hpp
processing/scripts/: compare_stacks.sh
processing/src/: alignment_processor.cpp  astro_processor.cpp
processing/tests/: alignment_processor_tests.cpp  astro_processor_tests.cpp
processing/tools/: alignment_preview.cpp  astro_preview.cpp
tools/: astro_render_mp4.py  astro_stack_test.py  denoise_test.py
vision/: CMakeLists.txt  README.md
vision/include/camerae_vision/: alignment.hpp  alignment_quality.hpp  automatic_alignment.hpp  capture_alignment_session.hpp  capture_support.hpp  diagnostics.hpp
vision/src/: automatic_alignment.cpp  capture_alignment_session.cpp  capture_support.cpp  diagnostics.cpp
vision/src/opencv/: alignment.cpp  alignment_quality.cpp
vision/tests/: alignment_quality_tests.cpp  alignment_tests.cpp  automatic_alignment_tests.cpp  capture_alignment_session_tests.cpp  capture_quality_simulator_tests.cpp  capture_support_tests.cpp  diagnostics_tests.cpp  vision_benchmark_tests.cpp  vision_regression_tests.cpp
vision/tools/: alignment_lab.cpp  capture_quality_simulator.cpp  capture_quality_simulator_support.cpp  capture_quality_simulator_support.hpp  vision_benchmark.cpp  vision_benchmark_support.cpp  vision_benchmark_support.hpp
(+215 files in other folders)
